--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vercel/speed-insights": "^1.0.10",
     "@videojs/http-streaming": "^3.10.0",
     "@videojs/themes": "^1.0.1",
+    "aos": "^2.3.4",
     "axios": "^1.6.8",
     "button": "^1.1.1",
     "class-variance-authority": "^0.7.0",
@@ -26,13 +27,14 @@
     "dayjs": "^1.11.10",
     "gsap": "^3.12.5",
     "lucide-react": "^0.368.0",
-    "next": "14.2.1",
+    "next": "^14.2.1",
     "next-auth": "^4.24.7",
     "next-cloudinary": "^6.5.0",
     "next-themes": "^0.3.0",
-    "next-video": "^1.0.4",
+    "next-video": "^1.0.6",
     "query-string": "^9.0.0",
     "react": "^18",
+    "react-animate-on-scroll": "^2.1.9",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
     "react-hot-toast": "^2.4.1",
@@ -46,6 +48,7 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-animate-on-scroll": "^2.1.8",
     "@types/react-dom": "^18",
     "postcss": "^8",
     "prisma": "^5.12.1",
