--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "button": "^1.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "compression": "^1.7.4",
     "dayjs": "^1.11.10",
     "lucide-react": "^0.368.0",
     "next": "^14.2.1",
