--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@mux/mux-player": "^2.5.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.12.1",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "@types/uuid": "^9.0.8",
     "@vercel/speed-insights": "^1.0.10",
     "@videojs/http-streaming": "^3.10.0",
@@ -32,22 +36,26 @@
     "next-cloudinary": "^6.5.0",
     "next-themes": "^0.3.0",
     "next-video": "^1.0.6",
+    "nodemailer": "^6.9.13",
     "query-string": "^9.0.0",
     "react": "^18",
     "react-animate-on-scroll": "^2.1.9",
     "react-dom": "^18",
-    "react-hook-form": "^7.51.3",
+    "react-hook-form": "^7.51.4",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-query": "^3.39.3",
     "react-share": "^5.1.0",
+    "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
-    "video.js": "^8.10.0"
+    "video.js": "^8.10.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
     "@types/react-animate-on-scroll": "^2.1.8",
     "@types/react-dom": "^18",
