--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-hook-form": "^7.51.4",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-intersection-observer": "^9.10.2",
     "react-query": "^3.39.3",
     "react-share": "^5.1.0",
     "sonner": "^1.4.41",
