--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
     "axios": "^1.6.8",
     "button": "^1.1.1",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
+    "clsx": "^2.1.1",
     "compression": "^1.7.4",
     "dayjs": "^1.11.10",
+    "framer-motion": "^11.2.6",
     "lucide-react": "^0.368.0",
     "next": "^14.2.1",
     "next-auth": "^4.24.7",
@@ -47,8 +48,9 @@
     "react-intersection-observer": "^9.10.2",
     "react-query": "^3.39.3",
     "react-share": "^5.1.0",
+    "simplex-noise": "^4.0.1",
     "sonner": "^1.4.41",
-    "tailwind-merge": "^2.2.2",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
     "video.js": "^8.10.0",
